# ConanCmakeBuild

./: .gitignore  README.md  WindowsProfile  build.bat
Source/: CMakeLists.txt  CMakePresets.json
Source/Launcher/: main.cpp
Sources/: FmtMaster.cpp
Stuff/: Build.py  BuildProjects.py  CommandRunner.py  DependencyConfig.py  InstallDeps.py  InstallTools.py  Profile  ProfileInfo.py  SystemInfo.py  ToolConfig.py  build.bat  install_buildtools.ps1
